--- a/Giddy Goat Coffee/Giddy Goat Coffee/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/en.lproj/MainStoryboard_iPhone.storyboard
@@ -13,12 +13,24 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="textWholeEngraved.png" id="Us9-PJ-14i">
-                                <rect key="frame" x="20" y="109" width="280" height="202"/>
+                            <imageView userInteractionEnabled="NO" contentMode="center" image="bkgd-woodgrain.png" id="n5n-LT-1X6">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="411"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="center" image="woodgrain1.png" id="n5n-LT-1X6">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="411"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small.png" id="lUJ-mr-bgU">
+                                <rect key="frame" x="272" y="305" width="40" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small.png" id="Gam-JR-xhD">
+                                <rect key="frame" x="180" y="127" width="85" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small_flip.png" id="Dfw-ey-hOO">
+                                <rect key="frame" x="255" y="191" width="45" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small_flip.png" id="naY-GT-DQq">
+                                <rect key="frame" x="0.0" y="274" width="45" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="3Mw-ey-Wfc">
@@ -71,7 +83,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="wordWrap" numberOfLines="8" baselineAdjustment="alignBaselines" minimumFontSize="10" text="" textAlignment="center" autoshrinkMode="minimumFontSize" id="3rZ-hz-8U5">
-                                <rect key="frame" x="34" y="154" width="252" height="157"/>
+                                <rect key="frame" x="34" y="158" width="252" height="157"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <nil key="highlightedColor"/>
                                 <color key="textColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
@@ -104,21 +116,16 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" lineBreakMode="tailTruncation" minimumFontSize="10" text="Our Coffees" textAlignment="center" autoshrinkMode="minimumFontSize" id="22">
-                                <rect key="frame" x="54" y="20" width="212" height="43"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <nil key="highlightedColor"/>
-                                <color key="shadowColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="shadowOffset" width="1" height="-1"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="center" image="woodgrain1.png" id="D1u-oO-ZjP">
+                            <imageView userInteractionEnabled="NO" contentMode="center" image="bkgd-woodgrain.png" id="D1u-oO-ZjP">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="411"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small_flip.png" id="1at-yj-8C7">
+                                <rect key="frame" x="279" y="376" width="45" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <pickerView contentMode="scaleToFill" id="vCI-gL-AZe">
-                                <rect key="frame" x="20" y="71" width="280" height="216"/>
+                                <rect key="frame" x="20" y="73" width="280" height="216"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
@@ -126,8 +133,12 @@
                                     <outlet property="delegate" destination="3" id="fsE-an-IAf"/>
                                 </connections>
                             </pickerView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small.png" id="G7G-Xa-TBR">
+                                <rect key="frame" x="1" y="283" width="40" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="10" text="" textAlignment="center" autoshrinkMode="minimumFontSize" id="qzT-x6-4lt">
-                                <rect key="frame" x="20" y="295" width="280" height="106"/>
+                                <rect key="frame" x="20" y="297" width="280" height="106"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="highlightedColor"/>
                                 <size key="shadowOffset" width="1" height="-1"/>
@@ -141,7 +152,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Coffees" image="coffee.png" id="6"/>
+                    <tabBarItem key="tabBarItem" title="Coffees" image="coffeeCup.png" id="6"/>
                     <connections>
                         <outlet property="coffeeLabel" destination="qzT-x6-4lt" id="JZo-bH-hgB"/>
                         <outlet property="coffeePicker" destination="vCI-gL-AZe" id="77F-kz-s5w"/>
@@ -179,8 +190,28 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" image="woodgrain1.png" id="3fD-IP-pcy">
+                            <imageView userInteractionEnabled="NO" contentMode="center" image="bkgd-woodgrain.png" id="3fD-IP-pcy">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="411"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="chalkboard.png" id="VsT-50-Roi">
+                                <rect key="frame" x="40" y="95" width="240" height="216"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small_flip.png" id="6rv-cN-TVx">
+                                <rect key="frame" x="5" y="219" width="45" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small_flip.png" id="Ukv-P5-1b6">
+                                <rect key="frame" x="69" y="375" width="45" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small.png" id="OAL-fc-mv7">
+                                <rect key="frame" x="268" y="123" width="40" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small.png" id="f0n-o9-ILU">
+                                <rect key="frame" x="40" y="348" width="40" height="43"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="3oU-xI-08z">
@@ -199,7 +230,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="wordWrap" numberOfLines="12" baselineAdjustment="alignBaselines" minimumFontSize="10" autoshrinkMode="minimumFontSize" id="F35-zB-JKD">
-                                <rect key="frame" x="95" y="161" width="144" height="156"/>
+                                <rect key="frame" x="93" y="123" width="144" height="156"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="highlightedColor"/>
                                 <string key="text">Coffee House Hours:
@@ -227,15 +258,6 @@ Sunday
                                     <action selector="callPopup:" destination="Gzn-uq-lxV" eventType="touchUpInside" id="9IV-hi-zek"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="10" autoshrinkMode="minimumFontSize" id="6h5-E4-ufv">
-                                <rect key="frame" x="91" y="96" width="152" height="57"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="highlightedColor"/>
-                                <string key="text">704 N Bishop Ave #2 
-Rolla, MO 65401</string>
-                                <color key="textColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="giddyInformation.png" id="yyr-xZ-Jj0">
                                 <rect key="frame" x="47" y="20" width="226" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -260,7 +282,7 @@ Rolla, MO 65401</string>
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" image="backgroundPinstripe.png" id="AeD-pl-bMX">
+                            <imageView userInteractionEnabled="NO" contentMode="center" image="bkgd-grayStripe.png" id="AeD-pl-bMX">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -335,9 +357,13 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO</
         </scene>
     </scenes>
     <resources>
+        <image name="Coffee_bean_small.png" width="41" height="30"/>
+        <image name="Coffee_bean_small_flip.png" width="41" height="30"/>
         <image name="action.png" width="86" height="58"/>
-        <image name="backgroundPinstripe.png" width="1600" height="1200"/>
-        <image name="coffee.png" width="24" height="26"/>
+        <image name="bkgd-grayStripe.png" width="320" height="480"/>
+        <image name="bkgd-woodgrain.png" width="320" height="480"/>
+        <image name="chalkboard.png" width="1088" height="768"/>
+        <image name="coffeeCup.png" width="20" height="24"/>
         <image name="coffesTitle.png" width="384" height="84"/>
         <image name="giddyCreditsGreen.png" width="184" height="90"/>
         <image name="giddyInformation.png" width="310" height="90"/>
@@ -347,9 +373,41 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO</
         <image name="plastiqueFacebook.png" width="145" height="143"/>
         <image name="plastiquePin.png" width="145" height="143"/>
         <image name="plastiqueTwitter.png" width="145" height="143"/>
-        <image name="textWholeEngraved.png" width="16" height="16"/>
-        <image name="woodgrain1.png" width="1024" height="768"/>
     </resources>
+    <classes>
+        <class className="GGCDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backgroundTapped:"/>
+                <relationship kind="action" name="shareMe:"/>
+                <relationship kind="outlet" name="itemDescripLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="itemNameLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GGCFirstViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCFirstViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="gotoFB:"/>
+                <relationship kind="action" name="gotoMap:"/>
+                <relationship kind="action" name="gotoTwitter:"/>
+                <relationship kind="outlet" name="specialsLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GGCSecondViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCSecondViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="coffeeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="coffeePicker" candidateClass="UIPickerView"/>
+            </relationships>
+        </class>
+        <class className="GGCThridViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGCThridViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="callPopup:"/>
+                <relationship kind="outlet" name="callButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
