--- a/Giddy Goat Coffee/Giddy Goat Coffee/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/en.lproj/MainStoryboard_iPhone.storyboard
@@ -18,7 +18,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small.png" id="lUJ-mr-bgU">
-                                <rect key="frame" x="272" y="305" width="40" height="30"/>
+                                <rect key="frame" x="20" y="312" width="40" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small.png" id="Gam-JR-xhD">
@@ -26,7 +26,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small_flip.png" id="Dfw-ey-hOO">
-                                <rect key="frame" x="255" y="191" width="45" height="30"/>
+                                <rect key="frame" x="269" y="191" width="45" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Coffee_bean_small_flip.png" id="naY-GT-DQq">
@@ -34,7 +34,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="3Mw-ey-Wfc">
-                                <rect key="frame" x="187" y="337" width="60" height="60"/>
+                                <rect key="frame" x="186" y="337" width="60" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" backgroundImage="routedAction.png">
@@ -45,7 +45,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="shareMe:" destination="2" eventType="touchUpInside" id="gzt-vI-cNS"/>
+                                    <action selector="getPhotoForSharing:" destination="2" eventType="touchUpInside" id="acq-Ic-yHB"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="giddyTitle.png" id="yVA-VE-YRs">
@@ -53,7 +53,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="Wfb-WA-j8W">
-                                <rect key="frame" x="73" y="339" width="55" height="55"/>
+                                <rect key="frame" x="74" y="339" width="55" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" backgroundImage="plastiquePin.png">
@@ -94,21 +94,6 @@
                                 </state>
                                 <connections>
                                     <segue destination="sYc-41-z3Q" kind="modal" modalTransitionStyle="flipHorizontal" id="QDg-xE-MQ4"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="MLB-Q8-Q4A">
-                                <rect key="frame" x="17" y="374" width="29" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="photoOpp:" destination="2" eventType="touchUpInside" id="3fB-j1-EeX"/>
                                 </connections>
                             </button>
                         </subviews>
