last beta commit before integrating test flight sdk

--- a/Giddy Goat Coffee/Giddy Goat Coffee/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/en.lproj/MainStoryboard_iPhone.storyboard
@@ -339,7 +339,7 @@ Icons:
 	Glyphish            glyphish.com
  Scott Lewis        iconify.it
 
-Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO</string>
+Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO tggch.com</string>
                                 <color key="textColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             </label>
@@ -414,6 +414,6 @@ Thanks to Ben &amp; Jen Bell, Owners of The Giddy Goat Coffee House  Rolla, MO</
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="VEb-0l-oqy"/>
+        <segue reference="spd-i3-5Th"/>
     </inferredMetricsTieBreakers>
 </document>
